--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,9 +18,8 @@ jobs:
     - uses: actions/checkout@v3
     - name: trunk-action
       uses: jetli/trunk-action@v0.1.0
-    - run: cd ./frontend
     - name: Build Frontend
-      run: npm run prod
+      run: npm run frontend-prod
     - run: cd  ../backend
     - name: Build Backend
       uses: cloudflare/wrangler-action@1.3.0
