--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -10,6 +10,8 @@ yew = "0.19.3"
 reqwest-wasm = "0.11.0"
 wasm-logger = "0.2.0"
 log = "0.4.16"
+wasm-bindgen = "*"
 wasm-bindgen-futures = "0.4.30"
+web-sys = "*"
 serde = { version = "1.0.48", features = ["derive"] }
 serde_json = "1.0.79"
