--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,6 +16,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: setup rust
+      run: npm run setup
     - name: trunk-action
       uses: jetli/trunk-action@v0.1.0
     - name: Build Frontend
