--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,7 @@
     "prod:css": "npx tailwindcss -c tailwind.config.js -o tailwind.css --minify"
   },
   "dependencies": {
-    "tailwindcss": "^3.0.24",
-    "babylonjs": "^5.7.0"
+    "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
     "concurrently": "^7.1.0"
