--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -15,3 +15,4 @@ wasm-bindgen-futures = "0.4.30"
 web-sys = "*"
 serde = { version = "1.0.48", features = ["derive"] }
 serde_json = "1.0.79"
+gloo = "*"
