--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,6 +18,8 @@ jobs:
     - uses: actions/checkout@v3
     - name: setup rust
       run: npm run setup
+    - name: run tests
+      run: cd ./frontend && cargo test && cd ..
     - name: trunk-action
       uses: jetli/trunk-action@v0.1.0
     - name: Build Frontend
