format & fix project loading

--- a/frontend-ts/.eslintrc.json
+++ b/frontend-ts/.eslintrc.json
@@ -108,6 +108,7 @@
 		"react/sort-comp": "off",
 		"react/state-in-constructor": "off",
 		"react/static-property-placement": "off",
+		"react/hook-use-state": "off",
 
 		"react/boolean-prop-naming": [
 			"error",
