bring in dependencies, session display screen

--- a/frontend-ts/package.json
+++ b/frontend-ts/package.json
@@ -25,7 +25,15 @@
 		"@tanstack/react-query": "4.2.3",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
-		"react-router-dom": "6.3.0"
+		"react-router-dom": "6.3.0",
+		"split.js": "1.6.5",
+		"react-split": "2.0.14",
+		"yjs": "13.5.41",
+		"y-indexeddb": "9.0.9",
+		"y-webrtc": "10.2.3",
+		"slate": "0.82.1",
+		"slate-react": "0.82.1",
+		"@slate-yjs/core": "0.2.8"
 	},
 	"devDependencies": {
 		"@nabla/vite-plugin-eslint": "1.4.1",
