--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,4 +1,4 @@
-name: Rust
+name: Build
 
 on:
   push:
@@ -17,16 +17,14 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: setup rust
-      run: npm run setup
-    - name: run tests
-      run: cd ./frontend && cargo test && cd ..
-    - name: trunk-action
-      uses: jetli/trunk-action@v0.1.0
+      run: pnpm setup
+    - name: run rust tests
+      run: cd ./frontend-ts/fountain && cargo test && cd ..
+    - name: run js tests
+      run: |
+        cd ./frontend-ts
+        pnpm install
+        pnpm test
     - name: Build Frontend
-      run: npm run frontend-prod
-    - run: cd  ./backend
-    - name: Build Backend
-      uses: cloudflare/wrangler-action@1.3.0
-      with:
-        apiToken: ${{ secrets.CF_API_TOKEN }}
+      run: cd ./frontend-ts && pnpm build
       
