--- a/frontend-ts/package.json
+++ b/frontend-ts/package.json
@@ -35,8 +35,8 @@
 		"slate-react": "0.82.1",
 		"@slate-yjs/core": "0.2.8",
 		"uuid": "9.0.0",
-		"lib0": "^0.2.35",
-		"fountain": "./fountain/pkg"
+		"fountain": "./fountain/pkg",
+		"idb": "7.0.2"
 	},
 	"devDependencies": {
 		"@nabla/vite-plugin-eslint": "1.4.1",
