--- a/frontend-ts/.eslintrc.json
+++ b/frontend-ts/.eslintrc.json
@@ -52,6 +52,7 @@
 		],
 		"no-void": "off",
 
+		"@typescript-eslint/no-type-alias": "off",
 		"@typescript-eslint/padding-line-between-statements": "off",
 		"@typescript-eslint/prefer-enum-initializers": "off",
 		"@typescript-eslint/prefer-readonly-parameter-types": "off",
