--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,14 +17,14 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: setup rust
-      run: pnpm setup
+      run: npm run setup
     - name: run rust tests
       run: cd ./frontend-ts/fountain && cargo test && cd ..
     - name: run js tests
       run: |
         cd ./frontend-ts
-        pnpm install
-        pnpm test
+        npm install
+        npm run test
     - name: Build Frontend
       run: cd ./frontend-ts && pnpm build
       
