--- a/frontend-ts/package.json
+++ b/frontend-ts/package.json
@@ -22,23 +22,23 @@
 		"validate": "run-p lint test:ci test:e2e:headless"
 	},
 	"dependencies": {
+		"@slate-yjs/core": "0.2.8",
 		"@tanstack/react-query": "4.2.3",
+		"idb": "7.0.2",
+		"js-base64": "3.7.2",
+		"peerjs": "1.4.7",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-router-dom": "6.3.0",
-		"split.js": "1.6.5",
 		"react-split": "2.0.14",
-		"yjs": "13.5.41",
-		"y-indexeddb": "9.0.9",
-		"y-webrtc": "10.2.3",
 		"slate": "0.82.1",
 		"slate-react": "0.82.1",
-		"@slate-yjs/core": "0.2.8",
+		"split.js": "1.6.5",
 		"uuid": "9.0.0",
-		"fountain": "./fountain/pkg",
-		"idb": "7.0.2",
-		"peerjs": "1.4.7",
-		"js-base64": "3.7.2"
+		"y-indexeddb": "9.0.9",
+		"y-webrtc": "10.2.3",
+		"yjs": "13.5.41"
+
 	},
 	"devDependencies": {
 		"@nabla/vite-plugin-eslint": "1.4.1",
@@ -48,12 +48,12 @@
 		"@testing-library/jest-dom": "5.16.5",
 		"@testing-library/react": "13.3.0",
 		"@testing-library/user-event": "14.4.3",
-		"@types/uuid": "8.3.4",
 		"@types/css-mediaquery": "0.1.1",
 		"@types/react": "18.0.18",
 		"@types/react-dom": "18.0.6",
 		"@types/react-router-dom": "5.3.3",
 		"@types/testing-library__jest-dom": "5.14.5",
+		"@types/uuid": "8.3.4",
 		"@typescript-eslint/eslint-plugin": "5.36.1",
 		"@typescript-eslint/parser": "5.36.1",
 		"@vitejs/plugin-react": "2.0.1",
@@ -92,13 +92,13 @@
 		"typescript": "4.8.2",
 		"vite": "3.0.9",
 		"vite-plugin-pwa": "0.12.4",
+		"vite-plugin-top-level-await": "1.1.1",
+		"vite-plugin-wasm": "2.1.0",
 		"vite-tsconfig-paths": "3.5.0",
 		"vitest": "0.22.1",
 		"whatwg-fetch": "3.6.2",
 		"workbox-build": "6.5.4",
-		"workbox-window": "6.5.4",
-		"vite-plugin-wasm": "2.1.0",
-		"vite-plugin-top-level-await": "1.1.1"
+		"workbox-window": "6.5.4"
 	},
 	"browserslist": {
 		"production": "Edge >= 18, Firefox >= 60, Chrome >= 61, Safari >= 11, Opera >= 48",
